# C2IT

./: .gitignore  README.md  go.mod  go.sum  main.go  performer-old.go  workspace.code-workspace
DataAnalysis/: app.py
Entity/: C2IT.ajs
Performer/C/: main.c
Performer/Python/src/c2it/: __main__.py
Performer/Python/src/c2it.egg-info/: top_level.txt
cmd/: consumable.go  entity.go  performer.go  root.go
pythonPackaging/: README.md  setup.cfg
pythonPackaging/src/c2it/: agent.py  ooda.py  probe.py
pythonPackaging/src/c2it.egg-info/: PKG-INFO  SOURCES.txt
services/webhosting/: Docker-compose.yml
services/webhosting/webserver/: Dockerfile
web/: index.html
