[metadata]
name = c2it
version = 0.0.4
author = 00010110 B.V.
author_email = input@00010110.nl
description = C2IT (See to IT) implementation in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/promouseus/C2IT
project_urls =
    Bug Tracker = https://github.com/promouseus/C2IT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Development Status :: 1 - Planning
    Natural Language :: English
    Topic :: System :: Systems Administration

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
